Updates to game.tsx and fixes to dropdown.tsx - Added game rating to banner content - Fixed overlay not showing for dropdown - Fixed underline not showing when hovering menu items

--- a/client/src/styles/dropdown.css
+++ b/client/src/styles/dropdown.css
@@ -5,7 +5,7 @@
   position: fixed;
   top: 115px;
   right: 0px;
-  z-index: 1;
+  z-index: 11;
   width: 210px;
   height: 300px;
   background-image: linear-gradient(to top, rgba(19, 27, 38, 0.88), rgba(30, 41, 56, 0.88));
@@ -48,5 +48,6 @@
 /* Dropdown link hover */
 .dropdown-link:hover {
   color: white;
-  text-decoration: underline;
+  text-decoration: underline !important;
+  text-decoration-color: white;
 }
