--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -61,7 +61,6 @@ body {
 .link {
   color: white;
   text-decoration: none;
-  display: contents;
 }
 
 /* Loading animation */
